src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Approval Admin Activity</fullName>
        <description>To populate the sales approval value on Status</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contact attempted</fullName>
        </values>
        <values>
            <fullName>Contract doesn%27t need renewal</fullName>
        </values>
        <values>
            <fullName>Contract lost</fullName>
        </values>
        <values>
            <fullName>Contract moved to new customer ID</fullName>
        </values>
        <values>
            <fullName>Materials Delivered</fullName>
        </values>
        <values>
            <fullName>Materials ordered</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Price calculation ordered</fullName>
        </values>
        <values>
            <fullName>SAP updated</fullName>
        </values>
        <values>
            <fullName>Sales Approval</fullName>
        </values>
        <values>
            <fullName>Sales Approval Inprogress</fullName>
        </values>
        <values>
            <fullName>Waiting for clarification of issues</fullName>
        </values>
        <values>
            <fullName>Waiting for production solution</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contract Renewal Admin Activity</fullName>
        <description>To be used for the contract renewal process and admin activities associated with the process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contact attempted</fullName>
        </values>
        <values>
            <fullName>Contract doesn%27t need renewal</fullName>
        </values>
        <values>
            <fullName>Contract lost</fullName>
        </values>
        <values>
            <fullName>Contract moved to new customer ID</fullName>
        </values>
        <values>
            <fullName>Materials Delivered</fullName>
        </values>
        <values>
            <fullName>Materials ordered</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Price calculation ordered</fullName>
        </values>
        <values>
            <fullName>SAP updated</fullName>
        </values>
        <values>
            <fullName>Waiting for clarification of issues</fullName>
        </values>
        <values>
            <fullName>Waiting for production solution</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credit check</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Checks Completed</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Control Case</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Decision</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process all cases</fullName>
        <description>This support process is used for all case types except Complaint and Item Search</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On-going</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process for Complaints and Item Search</fullName>
        <description>This support process is used for the case types Complaint and Item Search</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On-going</fullName>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Request for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process for DK Admin Case</fullName>
        <description>Support process for DK Admin Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to queue</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Waiting for info</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process for Sub-Cases</fullName>
        <description>This support process is used for the sub-case types, when conducting structured communication, surveys etc.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Request for Information</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support process for goodwill</fullName>
        <description>This support process is used for all case types Goodwill</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Created</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On-going</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>COD Account Number</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>BANKACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKGIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLUSGIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_case_type__c</fullName>
        <description>Used in approval process for opportinity</description>
        <label>Admin case type</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Approval</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
Case_Aging_Days__c&gt; 0 ,
TEXT(FLOOR(Case_Aging_Days__c)) &amp; &quot; days &quot;
&amp; TEXT(FLOOR(MOD(Case_Aging_Days__c* 24, 24))) &amp; &quot; hours &quot;
&amp; TEXT(ROUND(MOD(Case_Aging_Days__c* 24 * 60, 60), 0)) &amp;&quot; minutes&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Item_Id__c</fullName>
        <label>Alternate Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Agent_Unit__c</fullName>
        <formula>TEXT(User__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Agent Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Amount__c</fullName>
        <label>Appeal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal_Credit_Memo__c</fullName>
        <label>Appeal Credit Memo Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Detailed_Solution__c</fullName>
        <label>Appeal Detailed Solution</label>
        <picklist>
            <controllingField>Appeal_Solution__c</controllingField>
            <picklistValues>
                <fullName>New Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong decision in previous case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation / stamps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Payment_Date__c</fullName>
        <label>Appeal Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_SSF_Account_No__c</fullName>
        <label>Appeal SSF Account No.</label>
        <picklist>
            <picklistValues>
                <fullName>634270 - Forsikring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636125 - EK, erstatning pakker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636130 - PK, erstatning pakker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636135 - EK, erstatning breve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636140 - PK, erstatning breve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636145 - EK, erstatning øvrige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636160 - EK, produktfejl, kulance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636165 - PK, produktfejl, kulance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636170 - Udland, produktfejl, kulance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636175 - Erstatning pakker udland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>636180 - Erstatning breve udland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300550 - PK, EK portorefusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>168900 - Forlods udbetaling /Opkrævning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_SSF_Center__c</fullName>
        <label>Appeal SSF Center</label>
        <picklist>
            <picklistValues>
                <fullName>FINFRC_West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINKØB_East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Solution__c</fullName>
        <label>Appeal Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Appeal_Amount__c</fullName>
        <label>Approved Appeal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Goodwill_Amount__c</fullName>
        <label>Approved Goodwill Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_amount_of_compensation__c</fullName>
        <label>Approved Amount of compensation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrival_Submission_number__c</fullName>
        <label>Arrival/Submission Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Code__c</fullName>
        <label>Authorization Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Date__c</fullName>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <formula>Compensation_Account__r.Bank_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Radio_Button_img__c</fullName>
        <formula>IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blank Radio Button img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Item_Id__c</fullName>
        <description>Clear Interact Call Center Item Id</description>
        <label>CC Item Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Queue_Name__c</fullName>
        <description>Clear IT queue name.</description>
        <inlineHelpText>Clear IT queue name.</inlineHelpText>
        <label>CC Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Queue_Status__c</fullName>
        <label>CC Queue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enqueued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dequeued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Advice_of_Receipt_SI_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Special_Indications__c,&apos;Advice of receipt&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Advice of Receipt (SI) img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Advice_of_receipt_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Reason_for_Inquiry__c,&apos;Advice of receipt&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Advice of receipt img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Attached_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Facsimile__c,&apos;Attached&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Attached img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_COD_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Special_Indications__c,&apos;COD&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 COD img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Contents_missing_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Reason_for_Inquiry__c,&apos;Contents missing&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Contents missing img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Damage_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Reason_for_Inquiry__c,&apos;Damage&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Damage img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Delay_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Reason_for_Inquiry__c ,&apos;Delay&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Delay img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Dispatch_List_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Serial_No__c,&apos;Dispatch list (CN 16)&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Dispatch List img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Economy_Surface_img__c</fullName>
        <formula>IF(
   ISPICKVAL(CN08_Item__c,&apos;Economy / Surface&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
  IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Economy Surface img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Express_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Special_Indications__c,&apos;Express&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Express img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Facsimile__c</fullName>
        <label>Facsimile</label>
        <picklist>
            <picklistValues>
                <fullName>Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not attached</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Insured_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Main_Category__c,&apos;Insured&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Insured img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Item__c</fullName>
        <label>Item</label>
        <picklist>
            <picklistValues>
                <fullName>Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority / Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economy / Surface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Item_found__c</fullName>
        <label>Item found</label>
        <picklist>
            <picklistValues>
                <fullName>To the sender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To the addressee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Item_not_received_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Reason_for_Inquiry__c,&apos;Item not received&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Item not received img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Letter_bill_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_No_of_the_bill__c,&apos;Letter bill (CN 31 or CN 32)&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Letter bill img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Letter_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Type_of_Letter__c,&apos;Letter&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Letter img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Main_Category__c</fullName>
        <label>CN08 Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Ordinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_No_of_the_bill__c</fullName>
        <label>No of the bill</label>
        <picklist>
            <picklistValues>
                <fullName>Letter bill (CN 31 or CN 32)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special list (CN 33)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Non_priority_img__c</fullName>
        <formula>IF(
   ISPICKVAL(CN08_Item__c,&apos;Non-priority&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
  IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Non-priority img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Non_priority_surface_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Priority__c,&apos;Non-priority / Surface&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Non-priority surface img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Not_Attached_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Facsimile__c,&apos;Not Attached&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Not Attached img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Ordinary_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Main_Category__c,&apos;Ordinary&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Ordinary img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Parcel_bill_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Serial_No__c,&apos;Parcel bill (CP 86 or CP 87)&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Parcel bill img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Parcel_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Type_of_Letter__c,&apos;Parcel&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , IMAGE( $Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;)
)</formula>
        <label>CN08 Parcel img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Printed_Paper_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Type_of_Letter__c,&apos;Printed Paper&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Printed Paper img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Priority_Air_2_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Priority__c,&apos;Priority / Air&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Priority Air 2 img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Priority_Air_img__c</fullName>
        <formula>IF(
   ISPICKVAL(CN08_Item__c,&apos;Priority / Air&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
  IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Priority Air img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Priority / Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.A.L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-priority / Surface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Priority_img__c</fullName>
        <formula>IF(
  ISPICKVAL(CN08_Item__c,&apos;Priority&apos;) , 
  IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;),
  IMAGE( $Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Priority img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Reason_for_Inquiry__c</fullName>
        <description>The reason for inquiry</description>
        <label>Reason for Inquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Item not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contents missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice of receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Recorded_delivery_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Main_Category__c,&apos;Recorded delivery&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Recorded delivery img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Registered_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Main_Category__c,&apos;Registered&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Registered img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_SAL_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Priority__c,&apos;S.A.L&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 SAL img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Send_to_Addressee_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Item_found__c,&apos;To the addressee&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Send to Addressee img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Send_to_Sender_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Item_found__c,&apos;To the sender&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Send to Sender img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Serial_No__c</fullName>
        <label>Serial No</label>
        <picklist>
            <picklistValues>
                <fullName>Dispatch list (CN 16)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel bill (CP 86 or CP 87)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Small_Packet_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_Type_of_Letter__c,&apos;Small Packet&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Small Packet img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Special_Indications__c</fullName>
        <label>Special Indications</label>
        <picklist>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice of receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN08_Special_List_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN08_No_of_the_bill__c,&apos;Special list (CN 33)&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN08 Special List img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN08_Type_of_Letter__c</fullName>
        <label>Type of Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN18_A_prioritaire_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;A-Prioritaire&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 A-prioritaire img</label>
        <type>Text</type>
    </fields>
</CustomObject>